VBO & multitexture doesnt work #26410

Closed
opened 2011-03-08 10:26:01 +01:00 by Daniel Grauer · 9 comments
Member

Duplicates: #29464

%%%build: 35401
os: win7 64bit
GPU: GTX275
driver: 260.58

to reproduce open the attached blend file and enable/disable VBO and rotate the plane to refresh the viewport.%%%

**Duplicates**: #29464 %%%build: 35401 os: win7 64bit GPU: GTX275 driver: 260.58 to reproduce open the attached blend file and enable/disable VBO and rotate the plane to refresh the viewport.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I don't have VBO support here, can't check.

There's another VBO report open too, which might be related. Lukas can tell at least if this is supposed to work, or only for glsl...%%%

%%%I don't have VBO support here, can't check. There's another VBO report open too, which might be related. Lukas can tell at least if this is supposed to work, or only for glsl...%%%
Author
Member

%%%with multitexture i dont mean the shading, what i mean is when i have 2 textures/images on one object. with VBO enabled it only displays one texture.%%%

%%%with multitexture i dont mean the shading, what i mean is when i have 2 textures/images on one object. with VBO enabled it only displays one texture.%%%

%%%I can confirm this. With VBOs off both textures are displayed and with VBOs on, only one texture is displayed across the entire object.

Win7 64bit
ATi Radeon HD 5770
Latest drivers%%%

%%%I can confirm this. With VBOs off both textures are displayed and with VBOs on, only one texture is displayed across the entire object. Win7 64bit ATi Radeon HD 5770 Latest drivers%%%

%%%yes, i can confirm the bug. I'll look into it later%%%

%%%yes, i can confirm the bug. I'll look into it later%%%

%%%Any progress here?%%%

%%%Any progress here?%%%
%%%Closed duplicated report http://projects.blender.org/tracker/index.php?func=detail&aid=29464&group_id=9&atid=498%%%

%%%Should be fixed in svn rev42311.
Thanks for the report, closing it now.%%%

%%%Should be fixed in svn rev42311. Thanks for the report, closing it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26410
No description provided.