source/blender/editors/space_view3d/drawmesh.c
@@ -180,7 +180,7 @@ static void draw_mesh_face_select(RegionView3D *rv3d, Mesh *me, DerivedMesh *dm)
 		glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
 		/* dull unselected faces so as not to get in the way of seeing color */
 		glColor4ub(96, 96, 96, 64);
-		dm->drawMappedFacesTex(dm, draw_mesh_face_select__drawFaceOptsInv, (void*)me);
+		dm->drawMappedFacesTex(dm, draw_mesh_face_select__drawFaceOptsInv, NULL, (void*)me);
 		
 		glDisable(GL_BLEND);
 	}
@@ -629,6 +629,21 @@ static void draw_mesh_text(Scene *scene, Object *ob, int glsl)
 	ddm->release(ddm);
 }
 
+static int compareDrawOptions(void *userData, int cur_index, int next_index)
+{
+	Mesh *me= (Mesh*) userData;
+	MFace *mf= CustomData_get_layer(&me->fdata, CD_MFACE);
+	MTFace *tf= CustomData_get_layer(&me->fdata, CD_MTFACE);
+
+	if(mf[cur_index].mat_nr != mf[next_index].mat_nr)
+		return 0;
+
+	if(tf[cur_index].tpage != tf[next_index].tpage)
+		return 0;
+
+	return 1;
+}
+
 void draw_mesh_textured_old(Scene *scene, View3D *v3d, RegionView3D *rv3d, Object *ob, DerivedMesh *dm, int draw_flags)
 {
 	Mesh *me= ob->data;
@@ -649,26 +664,26 @@ void draw_mesh_textured_old(Scene *scene, View3D *v3d, RegionView3D *rv3d, Objec
 		data.has_mcol= CustomData_has_layer(&me->edit_mesh->fdata, CD_MCOL);
 		data.has_mtface= CustomData_has_layer(&me->edit_mesh->fdata, CD_MTFACE);
 
-		dm->drawMappedFacesTex(dm, draw_em_tf_mapped__set_draw, &data);
+		dm->drawMappedFacesTex(dm, draw_em_tf_mapped__set_draw, NULL, &data);
 	}
 	else if(draw_flags & DRAW_FACE_SELECT) {
 		if(ob->mode & OB_MODE_WEIGHT_PAINT)
-			dm->drawMappedFaces(dm, wpaint__setSolidDrawOptions, me, 1, GPU_enable_material, NULL);
+			dm->drawMappedFaces(dm, wpaint__setSolidDrawOptions, GPU_enable_material, NULL, me, 1);
 		else
-			dm->drawMappedFacesTex(dm, me->mface ? draw_tface_mapped__set_draw : NULL, me);
+			dm->drawMappedFacesTex(dm, me->mface ? draw_tface_mapped__set_draw : NULL, NULL, me);
 	}
 	else {
 		if(GPU_buffer_legacy(dm)) {
 			if (draw_flags & DRAW_DYNAMIC_PAINT_PREVIEW)
-				dm->drawFacesTex(dm, draw_mcol__set_draw_legacy);
+				dm->drawFacesTex(dm, draw_mcol__set_draw_legacy, NULL, NULL);
 			else 
-				dm->drawFacesTex(dm, draw_tface__set_draw_legacy);
+				dm->drawFacesTex(dm, draw_tface__set_draw_legacy, NULL, NULL);
 		}
 		else {
 			if(!CustomData_has_layer(&dm->faceData,CD_TEXTURE_MCOL))
 				add_tface_color_layer(dm);
 
-			dm->drawFacesTex(dm, draw_tface__set_draw);
+			dm->drawFacesTex(dm, draw_tface__set_draw, compareDrawOptions, ob->data);
 		}
 	}
 
@@ -806,7 +821,7 @@ void draw_mesh_textured(Scene *scene, View3D *v3d, RegionView3D *rv3d, Object *o
 		int useColors= 1;
 
 		dm->drawMappedFaces(dm, wpaint__setSolidDrawOptions,
-			ob->data, useColors, GPU_enable_material, NULL);
+			GPU_enable_material, NULL, ob->data, useColors);
 	}
 	else {
 		Mesh *me= ob->data;
